# chimera-text

./: .gitignore  Cargo.toml  Pipfile  README.md
src/core/: data.rs  merge.rs  mod.rs  parse.rs
test-books/: Alice in Wonderland.en.epub  Alice in Wonderland.it.epub  Alice's Adventures in Wonderland.en.epub  The Canterbury Tales.en.epub  The Canterbury Tales.it.epub  The Count of Monte Cristo.en.epub  The Count of Monte Cristo.it.epub  The Three Musketeers vol I-IV.en.epub  The Three Musketeers vol I.it.epub
