[package]
name = "chimera-text"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "cargo"] }
epub = "2.1.2"
epub-builder = "0.7.4"
html_parser = "0.7.0"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.5"
scraper = "0.19.0"
serde = {version = "1.0.203", features = ["derive"]}
simplelog = "0.12.2"
xml = "0.8.20"
xvii = "0.4.1"
